Correcting site logo resizing PR: * Making logo smaller overall; making a bit smaller still when the site title is visible * Add CSS class to the body to scale logo; also add with JS in Customizer * Update site branding to add extra div for styling the logo.

--- a/rtl.css
+++ b/rtl.css
@@ -62,6 +62,13 @@ input[type="checkbox"] {
 	right: -10000px;
 }
 
+/* Site Branding */
+
+.custom-logo-link {
+	padding-left: 1em;
+	padding-right: 0;
+}
+
 /* Main Navigation */
 
 .main-navigation ul {
@@ -254,6 +261,15 @@ input[type="checkbox"] {
 	.error404 #primary {
 		float: none;
 	}
+
+	/* Site Branding */
+
+	.custom-logo-link {
+		padding-left: 2em;
+		padding-right: 0;
+	}
+
+	/* Navigation */
 
 	.main-navigation ul ul {
 		padding-right: 0;
